test(cli): add tests and mocks
1. Mock @octokit/rest.js and dotenv
2. Refactor: rename github-resource-converter.js => base-resource-converter.js
3. Reports: send code coverage to Codacy
4. README.md: add contributing section
5. Add tests for baseResourceConverter

#1

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,18 @@ os:
   - linux
   - osx
 
+notifications:
+  webhooks: https://app.fossa.io/hooks/travisci
+
 before_script:
   - npm prune
 
 script:
   - npm test
 
-after_script: 'cat ./docs/reports/coverage/lcov.info | coveralls'
+after_script:
+  - 'cat ./docs/reports/coverage/lcov.info | coveralls'
+  - 'cat ./docs/reports/coverage/lcov.info | codacy-coverage'
 
 deploy:
   provider: script
