--- a/lib/.env.example
+++ b/lib/.env.example
@@ -1,5 +1,5 @@
 # .env.example, committed to repo
-## See https://github.com/rolodato/dotenv-safe#readme
+## See https://github.com/rolodato/dotenv#readme
 ## ⛔️
 ## ⛔️  DO NOT COMMIT YOUR ACTUAL .env file to version control.
 ## 🚫  It should only include environment-specific values such
