--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@semantic-release/npm": "3.2.2",
     "ajv": "6.2.1",
     "ajv-keywords": "3.1.0",
+    "codacy-coverage": "2.1.0",
     "commitplease": "3.2.0",
     "coveralls": "3.0.0",
     "eslint": "4.18.2",
@@ -106,7 +107,10 @@
     "*.md": ["npm run lint:md", "git add"]
   },
   "main": "lib/index.js",
-  "prettier": {},
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
   "repository": "https://github.com/gregswindle/github-resource-converter.git",
   "scripts": {
     "docs": "npm run docs:toc",
