--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     },
     "projects": ["<rootDir>"],
     "testEnvironment": "node",
+    "testMatch": ["<rootDir>/lib/__tests__/**/*.(spec|test).js?(x)"],
     "testPathIgnorePatterns": ["lib/__tests__/coverage/"]
   },
   "keywords": [
