ci(travis): fix 'no tests found' error
See https://travis-ci.org/gregswindle/github-resource-converter/jobs/355791728#L2892

#1,#4

--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     },
     "projects": ["<rootDir>"],
     "testEnvironment": "node",
-    "testMatch": ["<rootDir>/lib/__tests__/**/*.(spec|test).js?(x)"],
+    "testMatch": ["<rootDir>/lib/__tests__/**"],
     "testPathIgnorePatterns": ["lib/__tests__/coverage/"]
   },
   "keywords": [
