--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ os:
 notifications:
   webhooks: https://app.fossa.io/hooks/travisci
 
-before_script:
-  - npm prune
-  - npm dedupe
+# before_script:
+#   - npm prune
+#   - npm dedupe
 
 script:
   - npm test
