ci(travis): jest fixes and formatting
1. .eslintrc: switch-case: 2 spaces
2. .travis: git.depth = 1
3. .travis: no-npm-dedupe
4. .travis: send codacy coverage with npm-script posttest:ci:coverage:codacy
5. .env.example: better explanations with new envvars
6. manifest: format and add npm-scripts
7. docs: fix markdown-magic config to modify CONTRIBUTING.md

#1,#4

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,21 @@ os:
 notifications:
   webhooks: https://app.fossa.io/hooks/travisci
 
-# before_script:
+git:
+  depth: 1
+
+before_script:
+   - npm dedupe
 #   - npm prune
-#   - npm dedupe
 
 script:
   - npm test
 
 after_script:
+  - npm run posttest:ci:coverage:codacy
+  # - cat $TRAVIS_BUILD_DIR/lib/__tests__/coverage/lcov.info | codacy-coverage --token $CODACY_PROJECT_TOKEN
   # - 'cat ./lib/__tests__/coverage/lcov.info | coveralls'
-  - 'cat ./lib/__tests__/coverage/lcov.info | codacy-coverage'
+  # - 'cat ./lib/__tests__/coverage/lcov.info | codacy-coverage'
 
 deploy:
   provider: script
