ci(appveyor): fix path issue
Error parsing appveyor.yml:
(Line: 37, Col: 5, Idx: 864) - (Line: 37, Col: 6, Idx: 865):
While scanning for the next token, find character that cannot
start any token

#1,#4

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,5 +34,5 @@ test_script:
   - node --version
   - npm --version
   - cd %APPVEYOR_BUILD_FOLDER%
-  - %APPVEYOR_BUILD_FOLDER%/node_modules/.bin/jest %APPVEYOR_BUILD_FOLDER%/lib/__tests__/*.test.js
+  - .\node_modules\.bin\jest %APPVEYOR_BUILD_FOLDER%\lib\__tests__\*.test.js
   # - npm test
