--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 
 after_script:
   # - npm run posttest:ci:coverage:codacy
-  - cat $TRAVIS_BUILD_DIR/lib/__tests__/coverage/lcov.info | codacy-coverage --token $CODACY_PROJECT_TOKEN
+  - cat $TRAVIS_BUILD_DIR/lib/__tests__/coverage/lcov.info | codacy-coverage
   # - 'cat ./lib/__tests__/coverage/lcov.info | coveralls'
   # - 'cat ./lib/__tests__/coverage/lcov.info | codacy-coverage'
 
