--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,5 +34,6 @@ test_script:
   - node --version
   - npm --version
   - cd %APPVEYOR_BUILD_FOLDER%
-  - .\node_modules\.bin\jest %APPVEYOR_BUILD_FOLDER%\lib\__tests__\*.test.js
-  # - npm test
+  - npm run test:config
+  # - .\node_modules\.bin\jest %APPVEYOR_BUILD_FOLDER%\__tests__\*.test.js
+  - npm test
