--- a/package.json
+++ b/package.json
@@ -99,7 +99,13 @@
         "statements": 100
       }
     },
-    "testMatch": ["<rootDir>/__tests__/**/*.js"]
+    "moduleDirectories": ["node_modules", "lib"],
+    "testMatch": [
+      "<rootDir>/__tests__/base-resource-converter.test.js",
+      "<rootDir>/__tests__/file-exporter.test.js",
+      "<rootDir>/__tests__/(.*).js"
+    ],
+    "watchman": false
   },
   "jest-runner-eslint": {
     "cliOptions": {
