--- a/.github/config/sonar-project.properties
+++ b/.github/config/sonar-project.properties
@@ -1,5 +1,8 @@
 #Configure here general information about the environment, such as sonarcloud DB details for example
-#No information about specific project should appear here
+#No information about specific project should appear
+
+# @see https://docs.sonarqube.org/display/SONAR/Analysis+Parameters
+# @see https://docs.sonarqube.org/display/SONAR/Narrowing+the+Focus
 
 #----- Default sonarcloud server
 sonar.host.url=https://sonarcloud.io
@@ -26,23 +29,35 @@ sonar.sourceEncoding=UTF-8
 #----- Project info
 sonar.projectKey=gregswindle-github-resource-converter
 sonar.projectName=github-resource-converter
-sonar.projectVersion=0.1.5-development
+sonar.projectVersion=1.0.0
 
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
-sonar.links.homepage=https://github.com/gregswindle/github-resource-converter
+sonar.links.homepage=https://github.com/gregswindle/github-resource-converter#readme
 sonar.links.ci=https://travis-ci.org/gregswindle/github-resource-converter
-sonar.links.scm=https://github.com/gregswindle/github-resource-converter
+sonar.links.scm=https://github.com/gregswindle/github-resource-converter.git
 sonar.links.issue=https://github.com/gregswindle/github-resource-converter/issues
 
 # =====================================================
 #   Properties that will be shared amongst all modules
 # =====================================================
 
+sonar.language=js
+sonar.javascript.exclusions=**/node_modules/**,**/bower_components/**,**/coverage/**,**/__fixtures__/**,**/__mocks__/**
+# Included source code
 sonar.sources=lib
-sonar.tests=tests
+# Excluded from coverage
+sonar.coverage.exclusions=lib/__mocks__/*,lib/__fixtures__/*,lib/__tests__/coverage/*
+# Included test dirs
+sonar.test.inclusions=**/__tests__/**/*.test.js
+# Excluded source code directories
+sonar.exclusions=**/__tests__/**/*.js,**/__mocks__/*,**/__fixtures__/*
+# Excluded test dirs
+sonar.test.exclusions=**/__tests__/coverage/*,**/__mocks__/*,**/__fixtures__/*
+# Excluded CPD directories
+sonar.cpd.exclusions=**/__tests__/*,**/__mocks__/*,**/__fixtures__/*
 
 # Properties specific to language plugins:
 #   - For JavaScript
