--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
   },
   "contributors": [],
   "dependencies": {
-    "@octokit/rest": "15.2.5",
+    "@octokit/rest": "15.2.6",
     "bunyan": "1.8.12",
     "bunyan-format": "0.2.1",
     "chalk": "2.3.2",
     "dotenv": "5.0.1",
-    "insight": "0.10.0",
+    "fs-extra": "5.0.0",
+    "insight": "0.10.1",
     "jsonexport": "2.0.11",
     "lodash": "4.17.5",
     "meow": "4.0.0",
@@ -45,18 +46,18 @@
   "devDependencies": {
     "@semantic-release/changelog": "2.0.1",
     "@semantic-release/git": "4.0.1",
-    "@semantic-release/npm": "3.2.2",
-    "ajv": "6.3.0",
+    "@semantic-release/npm": "3.2.4",
+    "ajv": "6.4.0",
     "ajv-keywords": "3.1.0",
     "codacy-coverage": "2.1.1",
     "commitplease": "3.2.0",
     "coveralls": "3.0.0",
-    "eslint": "4.19.0",
+    "eslint": "4.19.1",
     "eslint-config-prettier": "^2.4.0",
     "eslint-config-scanjs": "1.0.0-beta4",
     "eslint-config-standard": "11.0.0",
     "eslint-config-xo": "0.20.1",
-    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-import": "2.10.0",
     "eslint-plugin-jsdoc": "3.5.0",
     "eslint-plugin-json": "1.2.0",
     "eslint-plugin-no-unsafe-innerhtml": "1.0.16",
@@ -69,17 +70,17 @@
     "eslint-plugin-xss": "0.1.9",
     "fixpack": "2.3.1",
     "husky": "^0.14.3",
-    "jest": "22.4.2",
+    "jest": "22.4.3",
     "jest-runner-eslint": "0.4.0",
     "lec": "^1.0.1",
-    "lint-staged": "7.0.0",
+    "lint-staged": "7.0.2",
     "markdown-magic": "0.1.21",
     "markdown-magic-dependency-table": "1.3.2",
     "markdown-magic-install-command": "1.3.1",
     "markdown-magic-package-scripts": "1.2.1",
     "nsp": "^3.2.1",
     "prettier": "1.11.1",
-    "semantic-release": "15.1.3"
+    "semantic-release": "15.1.4"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -168,7 +169,7 @@
     "lint":
       "npm run lint:js && npm run lint:json && npm run lint:manifest && npm run lint:md",
     "lint:js":
-      "eslint --config .github/config/.eslintrc.yml --ignore-path .gitignore --ext .js . --fix",
+      "node_modules/.bin/eslint -c .github/config/.eslintrc.yml --ext .js . --fix",
     "lint:json":
       "prettier ./**/*.json --ignore-path '.github/config/.prettierignore' --write",
     "lint:manifest": "fixpack",
